--- a/amazon_sales.ipynb
+++ b/amazon_sales.ipynb
@@ -10,8 +10,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2e72b779",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# including basic libaries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a582aca7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# supress warnings \n",
+    "from warnings import filterwarnings\n",
+    "filterwarnings('ignore')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fdce150",
    "metadata": {},
    "outputs": [],
    "source": []
